[Feat]Add registration link in gmail, add swaggo docs

--- a/ProjectP2-Hacktiv8/.env
+++ b/ProjectP2-Hacktiv8/.env
@@ -6,3 +6,8 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=12345678
 DB_NAME=P2_Hacktiv8
+
+REGIST_SECRET_KEY=ApiPhase2Hacktiv8
+LOGIN_SECRET_KEY=LoginAPIPhase2Hacktiv8
+
+APP_URL=http://localhost:8080
