[Feat]Fix testing, and some bugs

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_NAME=postgres
 REGIST_SECRET_KEY=ApiPhase2Hacktiv8
 LOGIN_SECRET_KEY=LoginAPIPhase2Hacktiv8
 
-APP_URL=https://projectp2-hacktiv8-8a3ad811f91c.herokuapp.com
+APP_URL=http://localhost:8080
 
 XENDIT_INVOICE_URL="https://api.xendit.co/v2/invoices"
 XENDIT_DISBURSEMENT_URL="https://api.xendit.co/disbursements"
